--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description"
           content="Metaphoraction: Support Gesture-based Interaction Design with Metaphorical Meanings">
-    <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+    <meta name="keywords" content="user experience, wearable gesture, mobile gesture, metaphor, creative support tool, Gesture-based interaction design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Metaphoraction</title>
 
@@ -109,7 +109,7 @@
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <img src="./static/images/metaphoraction.gif" class="img-fluid img-thumbnail"
                          alt="tochi_22_teaser">
-                    <div class="caption py-3">
+                    <div class="py-3">
                         <p>We present Metaphoraction, a creativity support tool that formulates design ideas for
                             gesture-based interactions. The tool assists designers in creating metaphorical meanings to
                             interaction design by interconnecting four components: gesture, action, object, and meaning.
@@ -155,7 +155,7 @@
                     <div class="py-4 thumbnail">
                         <img src="./static/images/components.jpg" class="img-fluid img-thumbnail col"
                              alt="tochi_22_components">
-                        <div class="caption">
+                        <div class="">
                             <p>An overview of Metaphoraction construction with four components: <i>gesture</i>, <i>action</i>,
                                 <i>object</i>, and <i>meaning</i>.
                             </p>
@@ -175,7 +175,7 @@
                     <div class="py-4 thumbnail text-center">
                         <img src="./static/images/pipeline.jpg" class="img-fluid img-thumbnail col"
                              alt="tochi_21_pipeline">
-                        <div class="caption text-start">
+                        <div class="text-start">
                             <!--<p><i>Theme</i> Health</p>-->
                             <p>An overall research pipeline of Metaphoraction.</p>
                             <p><strong>RP1</strong>: We conduct a literature survey to compile <a
@@ -204,7 +204,7 @@
                     <div class="py-4 thumbnail text-center">
                         <img src="./static/images/interface.jpg" class="img-fluid img-thumbnail col"
                              alt="tochi_21_interface">
-                        <div class="caption text-start">
+                        <div class="text-start">
                             <!--<p><i>Theme</i> Health</p>-->
                             <p>The interface of Metaphoraction. &#10122; is the search
                                 box; &#10123; is the Sankey diagram visualizing the possible design idea candidates;
