--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           rel="stylesheet">
 
     <link rel="stylesheet" href="./static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./static/css/academicons.min.css"/>
     <link rel="stylesheet" href="./static/assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./static/css/main.css">
     <link rel="icon" href="./static/images/favicon.ico">
@@ -85,7 +86,7 @@
                         <a href="https://dl.acm.org/doi/10.1145/3511892"
                            class="btn btn-outline-dark rounded-pill my-2">
                             <span class="icon">
-                                    <i class="fa-solid fa-file"></i>
+                                    <i class="ai ai-acm"></i>
                                 </span>
                             <span>Paper</span></a>
                         <a href="https://sunzhida.github.io/Metaphoraction/"
